# FluBoyy-Practical-Work-IIA-2

./: IIA_Evolutivo.xlsx  IIA__TrepaColinas.xlsx  README.md  Relatorio_IIA_Meta2.docx
Trepa_colinas/: CMakeLists.txt  algoritmo.c  algoritmo.h  funcao.c  funcao.h  main.c  utils.c  utils.h
evolutivo/: CMakeLists.txt  algoritmo.c  algoritmo.h  funcao.c  funcao.h  main.c  utils.c  utils.h
